--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
   <main>
-    <img src="assets/images/image-omelette.jpeg" class="hero-img"  alt="" srcset="">
+    <img src="assets/images/image-omelette.jpeg" class="hero-img"  alt="Hero-image of an omelette" srcset="">
    
     
     <article>
@@ -135,11 +135,14 @@
    
   </main>
  
-
-  
-  <div class="attribution">
+   
+  <footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Success Uche</a>.
-  </div>
+   </div>
+
+   </footer>
+  
 </body>
 </html>
